--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.1'
 services:
 
   tgbot:
-    container_name: tbot
+    container_name: photobot
     build:
       context: .
     command: python main.py
